--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,7 +1,10 @@
 name: Python Package using Conda
 
-on: [push]
-
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 jobs:
   build-linux:
     runs-on: ubuntu-latest
