--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,7 +28,7 @@ jobs:
             python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
             python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
      
-      - run: dvc pull data/ 
+      - run: dvc pull
         env:
           GDRIVE_CREDENTIALS_DATA: $
       - run: |
