--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -30,7 +30,7 @@ jobs:
      
       - run: | 
             dvc remote add driveremote gdrive://1Wo-9a-fnLbF0dLiXVGq3P9X9ZuRwGVtO
-            dvc pull -r filterout --run-cache
+            dvc pull -r driveremote --run-cache
         env:
           GDRIVE_CREDENTIALS_DATA: $
       - run: |
