--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,12 +1,4 @@
-version: 1
-labels:
-  - label: "source"
-    files: 
-      - src/**/*
-  - label: "modeling"
-    files:
-      - src/modeling/*
-  - label: "preprocessing"
-    files:
-      - src/preprocessing/*
+source:
+- any: ['src/*']
+
 
