--- a/.github/workflows/python-conda.yml
+++ b/.github/workflows/python-conda.yml
@@ -24,7 +24,8 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file environments.yml --name census
+        conda create -f environments.yml
+        conda activate census
     - name: Lint with flake8
       run: |
         conda install flake8
