--- a/.github/workflows/python-conda.yml
+++ b/.github/workflows/python-conda.yml
@@ -24,7 +24,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda create -f environments.yml
+        conda env create -f environments.yml
         conda activate census
     - name: Lint with flake8
       run: |
